# spuc

./: .env.example  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  a__d_8cpp.html  a__d_8cpp__incl.map  a__d_8h.html  a__d_8h__dep__incl.map  a__d_8h__incl.map  agc_8cpp.html  agc_8cpp__incl.map  agc_8h.html  agc_8h__dep__incl.map  agc_8h__incl.map  allpass_8h.html  allpass_8h__dep__incl.map  allpass_8h__incl.map  allpass__1_8h.html  allpass__1_8h__dep__incl.map  allpass__1_8h__incl.map  allpass__1aq1_8cpp.html  allpass__1aq1_8cpp__incl.map  allpass__1aq1_8h.html  allpass__1aq1_8h__dep__incl.map  allpass__1aq1_8h__incl.map  allpass__1aq2_8cpp.html  allpass__1aq2_8cpp__incl.map  allpass__1aq2_8h.html  allpass__1aq2_8h__dep__incl.map  allpass__1aq2_8h__incl.map  allpass__2nd_8h.html  allpass__2nd_8h__dep__incl.map  allpass__2nd_8h__incl.map  annotated.html  array1d_8h.html  array1d_8h__incl.map  (+1799 more)
boost_src/: audio_buffer.cpp  audio_buffer.h  freq_functions.cpp  spuc_audio.cpp  spuc_filtdes.cpp  spuclib.h
cpplot/: CMakeLists.txt  README.md  cpplot.pc.cmake  cpplotConfig.cmake.in
cpplot/include/: axes.hpp  cpplot.hpp  cpplot_common.hpp  drawing.hpp  figure.hpp  glut.hpp  layer.hpp  line.hpp  matplotpp.h  patch.hpp  surface.hpp  text.hpp  types.hpp
cpplot/src/: axes.cpp  color.cpp  cpplot.cpp  figure.cpp  glut.cpp  line.cpp  matplotpp.cpp  patch.cpp  surface.cpp
examples/: CMakeLists.txt  equalizer.h  equalizers_sim.cpp  qpsk_main.cpp  qpsk_main_vs.cpp  qpsk_temp.cpp  qpsk_variable_main.cpp  reference_main.cpp  test_auto_corr.cpp  test_cic.cpp  test_cmat.cpp  test_ddfse.cpp  test_dump.cpp  test_elliptic_allpass.cpp  test_filters.cpp  test_fir2.cpp  test_fp16.cpp  test_fpint.cpp  test_iir.cpp  test_iir2nd.cpp  test_int_fp.cpp  test_interp.cpp  test_ls_solve.cpp  test_mlse.cpp  test_notch.cpp  test_q.cpp  test_rls.cpp  test_roots.cpp  test_sim_equalizer.cpp  test_sint.cpp  test_sint2.cpp  test_smart_test.cpp
extensions/: CMakeLists.txt  __init__.py  test_imports  tmp_test_f.py
graphic_examples/: CMakeLists.txt  qpsk_ber.cpp  qpsk_scatter.cpp  test_auto_corr.cpp  test_cic.cpp  test_elliptic_allpass.cpp  test_filters.cpp  test_iir.cpp  test_iir2nd.cpp  test_interp.cpp  test_mlse.cpp  test_notch.cpp
plot_examples/: CMakeLists.txt  MPLPlot.h  m.sh  plot_fft.cpp  plot_fft.h  test_butterworth_fir.cpp  test_butterworth_iir.cpp  test_butterworth_iir_hpf.cpp  test_chebyshev_iir.cpp  test_chebyshev_iir_hpf.cpp  test_elliptic_iir.cpp  test_elliptic_iir_hpf.cpp  test_gaussian.cpp  test_iir_allpass1.cpp  test_interp.cpp  test_notch.cpp  test_remez.cpp
pyste/: a_d.cpp  agc.cpp  allpass_1_double.cpp  allpass_1_float.cpp  allpass_1_int.cpp  allpass_1aq1.cpp  allpass_1aq2.cpp  allpass_2nd_double.cpp  allpass_2nd_float.cpp  allpass_2nd_int.cpp  allpass_double.cpp  allpass_float.cpp  allpass_int.cpp  base_demod_double.cpp  base_demod_float.cpp  base_demod_int.cpp  baud_eq_env_double.cpp  bit.cpp  bit_scrambler.cpp  bpe_double.cpp  bpe_float.cpp  bpe_int.cpp  bpsk_ber_test.cpp  builtin.cpp  butterworth_allpass.cpp  butterworth_fir.cpp  butterworth_iir.cpp  carrier_nco.cpp  cfft.cpp  chebyshev_iir.cpp  cic_double.cpp  cic_float.cpp  cic_int.cpp  circ_buffer_double.cpp  circ_buffer_float.cpp  circ_buffer_int.cpp  complex_double.cpp  complex_float.cpp  complex_int.cpp  complex_long.cpp  (+208 more)
spuc/: a_d.cpp  a_d.h  agc.cpp  agc.h  allpass.h  allpass_1.h  allpass_1aq1.cpp  allpass_1aq1.h  allpass_1aq2.cpp  allpass_1aq2.h  allpass_2nd.h  array.h  array1d.h  array2d.h  auto_corr.h  bartlett.cpp  bartlett.h  base_demod.h  base_type.h  baud_eq_env.h  bit.cpp  bit.h  bit_scrambler.cpp  bit_scrambler.h  bpe.h  bpsk_ber_test.cpp  bpsk_ber_test.h  bpsk_dd_phase.h  bpsk_quadricorrelator.h  builtin.h  burg.h  butterworth_allpass.cpp  butterworth_allpass.h  butterworth_fir.cpp  butterworth_fir.h  butterworth_iir.cpp  butterworth_iir.h  carrier_nco.cpp  carrier_nco.h  cascaded_cic.h  (+244 more)
spuc/dsp_functions/: auto_corr.h  burg.h  cfft.cpp  cfft.h  fft.cpp  fft.h  idft.cpp  idft.h  ifft.cpp  ifft.h  spuc_math.cpp  toeplitz.h  xcorr.cpp  xcorr.h
src/: main.rs
src/common/: blacklist.rs  config.rs  constants.rs  logger.rs  mod.rs
src/core/: mod.rs  token.rs  tx.rs
src/dex/: mod.rs  pump_fun.rs
src/engine/: mod.rs  monitor.rs  swap.rs
src/error/: mod.rs
src/services/: jito.rs  mod.rs  nozomi.rs  zeroslot.rs
web/: Doxyfile  dsp_templates.html  makefile  makepages
